cabal-version: 3.0
name:          package2
version:       1.0.0
description:   Package 2
build-type:    Simple

executable executable2
    ghc-options:      -Wall -fhide-source-paths -threaded -O2
    hs-source-dirs:   executable
    default-language: Haskell2010
    main-is:          Main.hs
    build-depends:
        , base
        , optparse-applicative
        , package1
        , package2

library
    ghc-options:      -Wall -fhide-source-paths
    hs-source-dirs:   src/
    default-language: Haskell2010
    exposed-modules:  LibraryModule2
    build-depends:    base

test-suite package2-tests
    type:             exitcode-stdio-1.0
    ghc-options:      -Wall -fhide-source-paths
    hs-source-dirs:   unit-test
    default-language: Haskell2010
    main-is:          Spec.hs
    other-modules:    LibraryModule2Spec
    build-depends:
        , base
        , hspec
        , package2
