
[project]
name = "my-project"
version = "0.1.0"
description = ""
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
my-script = "my_project:main"

[project.optional-dependencies]
dev = [
    "pi>=0.1.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
