[package]
name = "indexer"
version = "0.1.0"
authors = ["dusk <y.bera003.06@pm.me>"]
license = "MIT"
edition = "2021"
resolver = "2"

[features]
default = ["gen"]
gen = ["cargo", "curl", "serde"]

[dependencies]
cargo = { version = "0.61", optional = true }
curl = { version = "0.4", features = ["http2"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"